<resources>
    <string name="app_name">FlowersClassification</string>

    <string name="m_permission_camera_permission_denied">Need camera permission to continue</string>

    <string name="m_camera_failed_to_recognize">Failed to recognize objects</string>
    <string name="m_camera_pick_image">Pick image</string>
    <string name="cd_camera_settings">Settings button</string>
    <string name="cd_camera_result_image">Result image</string>
    <string name="cd_camera_select_from_gallery">Select from gallery</string>

    <string name="c_settings_title">Settings</string>
    <string name="c_settings_header_classifier">Classifier</string>
    <string name="c_settings_compute_device">Device</string>
    <string name="c_settings_multi_crop">Multi-crop</string>
    <string name="c_settings_multi_crop_summary_on">Use multi-crop</string>
    <string name="c_settings_multi_crop_summary_off">Disabled</string>
    <string name="c_settings_confidence_threshold">Threshold</string>
    <string name="c_settings_header_about">About</string>
    <string name="c_settings_app_version">App version</string>
    <string name="c_settings_model_version">Model version</string>

    <string name="key_settings_device" translatable="false">key_settings_device</string>
    <string name="key_settings_multi_crop_enabled" translatable="false">key_settings_multi_crop_enabled</string>
    <string name="key_settings_confidence_threshold" translatable="false">key_settings_confidence_threshold</string>
    <string name="default_settings_confidence_threshold" translatable="false">60</string>
</resources>